added tailwind and fontawesome

--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | [Your Name]</title>
+    <title>Portfolio | Sepehr Fathali</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://kit.fontawesome.com/0c09467a5a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <nav>
+<body class="bg-violet-300">
+    <nav class="bg-black">
         <a href="#home">Home</a>
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
     </nav>
 
-    <section id="home">
-        <h1>[Your Name]</h1>
-        <p>Minimalist Web Developer & Tech Enthusiast</p>
+    <section id="home" class="bg-purple-700 rounded-lg">
+        <h1 class="text-3xl font-bold underline">
+            Sepehr Fathali
+          </h1>
+        <h1>Software Engineer</h1>
+        <div class="flex justify-center gap-4 mt-6">
+            <a href="https://github.com/53p3h2" target="_blank" class="text-white hover:text-gray-200">
+                <i class="fa-brands fa-github"></i> GitHub
+            </a>
+        </div>
     </section>
 
     <section id="projects">
