added contact info and projects

--- a/index.html
+++ b/index.html
@@ -22,21 +22,31 @@
           </h1>
         <h1>Software Engineer</h1>
         <div class="flex justify-center gap-4 mt-6">
+            <a href="mailto:your.email@example.com" class="text-white hover:text-gray-200">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
             <a href="https://github.com/53p3h2" target="_blank" class="text-white hover:text-gray-200">
-                <i class="fa-brands fa-github"></i> GitHub
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="www.linkedin.com/in/sepehr-fathali-5999042a3" target="_blank" class="text-white hover:text-gray-200">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/s3p3h2/" target="_blank" class="text-white hover:text-gray-200">
+                <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li>Project 1 - <a href="#">Details</a></li>
-            <li>Project 2 - <a href="#">Details</a></li>
-            <li>Project 3 - <a href="#">Details</a></li>
-        </ul>
+    <section id="projects" class="p-10">
+        <h2 class="text-3xl font-bold mb-4">Projects</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 50%; padding-top: 120px;"><a href="https://github.com/53p3h2/c_cat" data-iframely-url="//iframely.net/zaGSE5b"></a></div></div><script async src="//iframely.net/embed.js"></script>
+            <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 50%; padding-top: 120px;"><a href="https://github.com/53p3h2/portfolio" data-iframely-url="//iframely.net/dzTv0OT"></a></div></div><script async src="//iframely.net/embed.js"></script>
+            <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 50%; padding-top: 120px;"><a href="https://github.com/53p3h2/bittorrentclient" data-iframely-url="//iframely.net/8yWtjgl"></a></div></div><script async src="//iframely.net/embed.js"></script>
+        </div>
     </section>
-
+    
+    
     <section id="skills">
         <h2>Skills</h2>
         <p>HTML, CSS, JavaScript, Python, Git</p>
