fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="https://github.com/53p3h2" target="_blank" class="text-white hover:text-gray-200">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="www.linkedin.com/in/sepehr-fathali-5999042a3" target="_blank" class="text-white hover:text-gray-200">
+            <a href="https://linkedin.com/in/sepehr-fathali-5999042a3" target="_blank" class="text-white hover:text-gray-200">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
             <a href="https://www.instagram.com/s3p3h2/" target="_blank" class="text-white hover:text-gray-200">
