making contact icons bigger

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <h1>Software Engineer</h1>
         <div class="flex justify-center gap-4 mt-6">
             <a href="mailto:your.email@example.com" class="text-white hover:text-gray-200">
-                <i class="fa-solid fa-envelope"></i>
+                <i class="fa-solid fa-envelope fa-3x"></i>
             </a>
             <a href="https://github.com/53p3h2" target="_blank" class="text-white hover:text-gray-200">
-                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-github fa-3x"></i>
             </a>
             <a href="https://linkedin.com/in/sepehr-fathali-5999042a3" target="_blank" class="text-white hover:text-gray-200">
-                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-linkedin fa-3x"></i>
             </a>
             <a href="https://www.instagram.com/s3p3h2/" target="_blank" class="text-white hover:text-gray-200">
-                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-instagram fa-3x"></i>
             </a>
         </div>
     </section>
