added skills section icons

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <h1 class="text-3xl font-bold underline">
             Sepehr Fathali
           </h1>
-        <h1>Software Engineer</h1>
+        <h1 class="text-1xl font-bold">Software Engineer</h1>
         <div class="flex justify-center gap-4 mt-6">
-            <a href="mailto:your.email@example.com" class="text-white hover:text-gray-200">
+            <a href="mailto:your.email@example.com" class="text-white hover:text-gray-200 contact">
                 <i class="fa-solid fa-envelope fa-3x"></i>
             </a>
-            <a href="https://github.com/53p3h2" target="_blank" class="text-white hover:text-gray-200">
+            <a href="https://github.com/53p3h2" target="_blank" class="text-white hover:text-gray-200 contact">
                 <i class="fa-brands fa-github fa-3x"></i>
             </a>
-            <a href="https://linkedin.com/in/sepehr-fathali-5999042a3" target="_blank" class="text-white hover:text-gray-200">
+            <a href="https://linkedin.com/in/sepehr-fathali-5999042a3" target="_blank" class="text-white hover:text-gray-200 contact">
                 <i class="fa-brands fa-linkedin fa-3x"></i>
             </a>
-            <a href="https://www.instagram.com/s3p3h2/" target="_blank" class="text-white hover:text-gray-200">
+            <a href="https://www.instagram.com/s3p3h2/" target="_blank" class="text-white hover:text-gray-200 contact">
                 <i class="fa-brands fa-instagram fa-3x"></i>
             </a>
         </div>
@@ -50,15 +50,16 @@
     <section id="skills" class="p-10">
         <h2 class="text-3xl font-bold mb-4">Skills</h2>
         <div class="flex flex-wrap gap-6 justify-center items-center">
-            <div class="text-5xl text-blue-500"><i class="fab fa-html5"></i></div>
-            <div class="text-5xl text-yellow-400"><i class="fab fa-js"></i></div>
-            <div class="text-5xl text-blue-400"><i class="fab fa-css3-alt"></i></div>
-            <div class="text-5xl text-sky-400"><i class="fab fa-react"></i></div>
-            <div class="text-5xl text-red-500"><i class="fab fa-git-alt"></i></div>
-            <div class="text-5xl text-blue-600"><i class="fab fa-github"></i></div>
-            <div class="text-5xl text-teal-400"><i class="fab fa-node-js"></i></div>
-            <div class="text-5xl text-green-500"><i class="fab fa-python"></i></div>
-            <div class="text-5xl text-gray-800"><i class="fab fa-linux"></i></div>
+            <div class="text-orange-600 hover:scale-110 transition-transform"><i class="fab fa-html5 fa-4x"></i></div>
+            <div class="text-indigo-700 hover:scale-110 transition-transform"><i class="fab fa-css3-alt fa-4x"></i></div>
+            <div class="text-yellow-400 hover:scale-110 transition-transform"><i class="fab fa-js fa-4x"></i></div>
+            <div class="text-green-600 hover:scale-110 transition-transform"><i class="fab fa-python fa-4x"></i></div>
+            <div class="text-sky-400 hover:scale-110 transition-transform"><i class="fab fa-c fa-4x"></i></div>
+            <div class="text-lime-700 hover:scale-110 transition-transform"><i class="fab fa-node fa-4x"></i></div>
+            <div class="text-zinc-900 hover:scale-110 transition-transform"><i class="fab fa-linux fa-4x"></i></div>
+            <div class="text-zinc-900 hover:scale-110 transition-transform"><i class="fab fa-git fa-4x"></i></div>
+            <div class="text-slate-800 hover:scale-110 transition-transform"><i class="fab fa-php fa-4x"></i></div>
+
         </div>
     </section>
     
