--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
     </nav>
-
-    <section id="home" class="bg-purple-700 rounded-lg">
+    <section class="sections">
+    <section id="home" class="bg-purple-700 rounded-lg p-10 mx-4 md:mx-10">
         <h1 class="text-3xl font-bold underline">
             Sepehr Fathali
           </h1>
@@ -59,6 +59,8 @@
             <div class="text-zinc-900 hover:scale-110 transition-transform"><i class="fab fa-linux fa-4x"></i></div>
             <div class="text-zinc-900 hover:scale-110 transition-transform"><i class="fab fa-git fa-4x"></i></div>
             <div class="text-slate-800 hover:scale-110 transition-transform"><i class="fab fa-php fa-4x"></i></div>
+            <div class="text-amber-700 hover:scale-110 transition-transform"><i class="fab fa-rust fa-4x"></i></div>
+            <div class="text-indigo-950 hover:scale-110 transition-transform"><i class="fab fa-database fa-4x"></i></div>
 
         </div>
     </section>
@@ -66,8 +68,9 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-        <p>GitHub: <a href="https://github.com/yourusername" target="_blank">@yourusername</a></p>
+        <p>Email: <a href="mailto:53p3h2@gmail.com">53p3h2@gmail.com</a></p>
+        <p>GitHub: <a href="https://github.com/53p3h2" target="_blank">@53p3h2</a></p>
+    </section>
     </section>
 
     <script src="assets/js/script.js"></script>
