--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="text-zinc-900 hover:scale-110 transition-transform"><i class="fab fa-git fa-4x"></i></div>
             <div class="text-slate-800 hover:scale-110 transition-transform"><i class="fab fa-php fa-4x"></i></div>
             <div class="text-amber-700 hover:scale-110 transition-transform"><i class="fab fa-rust fa-4x"></i></div>
-            <div class="text-indigo-950 hover:scale-110 transition-transform"><i class="fa-solid fa-database fa-4x"></i></div>
+            <div class="text-indigo-950 hover:scale-110 transition-transform"><i class="fa-regular fa-database fa-4x"></i></div>
 
         </div>
     </section>
